--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,9 +43,15 @@
             android:screenOrientation="portrait">
 
         </activity>
+        <activity
+            android:name=".test.DeviceInfoActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 </manifest>
