--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,11 @@
             android:screenOrientation="portrait">
 
         </activity>
+        <activity
+            android:name=".test.NavigationActivity"
+            android:screenOrientation="portrait">
+
+        </activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
